Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignObjectField.quorum
class Main
    Object v
    v:SetValue()
    action Main
        Test(v)
    end

    action Test(undefined var)
    end
end
